kubernetes/aj-alphabet-dev.palladi.us.yaml
### Created on Do 07 Jan 2021 17:22:01 CET by ./kubernettizza-env-files.sh. go to../ and re call it to refresh data. DO NOT EDIT!
---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: ajalphabet-dev-deployment
spec:
    selector:
        matchLabels:
            app: ajalphabet-dev
    template:
        metadata:
            labels:
                app: ajalphabet-dev
        spec: 
            containers:
                - name: ajalphabet-dev
#                  image: gcr.io/goliardia-prod/aj-alfabeto:latest
                  image: gcr.io/goliardia-prod/aj-alfabeto:v2.03
                  imagePullPolicy: Always
                  command: [ "make", "run"]
#                  command: [ "./entrypoint-8080.sh"]       # questo non va            
---
apiVersion: v1
kind: Service
metadata:
  name: ajalphabet-dev-service
spec:
  type: LoadBalancer
  selector:
    app: ajalphabet-dev
  ports:
  - name: http
    port: 80
    targetPort: 8080
