kubernetes/aj-alphabet.palladi.us.yaml
### Created on Do 07 Jan 2021 17:22:01 CET by ./kubernettizza-env-files.sh. go to../ and re call it to refresh data. DO NOT EDIT!
---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: ajalphabet-prod-deployment
spec:
    selector:
        matchLabels:
            app: ajalphabet-prod
    template:
        metadata:
            labels:
                app: ajalphabet-prod
        spec: 
            containers:
                - name: ajalphabet-prod
                  image: gcr.io/goliardia-prod/aj-alfabeto:latest
#                  image: gcr.io/goliardia-prod/aj-alfabeto:v1.3
                  imagePullPolicy: Always
                  #command: [ "rails", "server", "-b", "0.0.0.0", "-p", "8080"]
                  command: [ "make", "run"]
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ajalphabet-prod-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ajalphabet-global-prod
    ### "https://console.cloud.google.com/networking/addresses/list?hl=it&organizationId=615578690183&project=goliardia-prod"
    ### ajalphabet-global-prod	34.120.195.77
    # $ dns-setup-palladius.sh aj-alphabet.palladi.us 34.120.195.77
    networking.gke.io/managed-certificates: ajalphabet-prod-certificate
spec:
  rules:
  - host: aj-alphabet.palladi.us
    http:
      paths:
      - backend:
          serviceName: ajalphabet-prod-service
          servicePort: http
---
apiVersion: v1
kind: Service
metadata:
  name: ajalphabet-prod-service
spec:
  # Soccmel non ci credo che funziona!! Wow! Credo sia l'unico mio nodeport che funge! :)
  type: NodePort
  selector:
    app: ajalphabet-prod
  ports:
  - name: http
    port: 80
    targetPort: 8080
